--- a/Paint101/Paint101.Desktop/Views/ShellView.xaml
+++ b/Paint101/Paint101.Desktop/Views/ShellView.xaml
@@ -8,20 +8,52 @@
         xmlns:cal="http://www.caliburnproject.org"
         mc:Ignorable="d"
         Height="600" Width="900">
+
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <ScrollViewer Grid.Row="0" Grid.Column="0"
+        <ScrollViewer Grid.Row="0" Grid.Column="1"
                       HorizontalScrollBarVisibility="Auto"
                       VerticalScrollBarVisibility="Auto">
             <lc:Canvas CanvasData="{Binding CanvasModel.CanvasData}"/>
         </ScrollViewer>
-        <Button Grid.Row="1" Grid.Column="0"
-                Content="Draw" cal:Message.Attach="Draw"/>
+
+        <Grid Grid.Row="0" Grid.Column="0" MinWidth="100"
+              DataContext="{Binding FigureLibrary}">
+            <ListView Name="FiguresLibraryList" ItemsSource="{Binding Figures}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Tag="{Binding DataContext, ElementName=FiguresLibraryList}">
+                            <StackPanel.ContextMenu>
+                                <ContextMenu cal:Bind.ModelWithoutContext="{Binding Path=PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
+                                    <MenuItem Header="Add" cal:Message.Attach="Add($datacontext)"/>
+                                </ContextMenu>
+                            </StackPanel.ContextMenu>
+                            <TextBlock Text="{Binding DisplayName}" ToolTip="{Binding Description}"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
+
+        <Grid Grid.Row="0" Grid.Column="2" MinWidth="100"
+              DataContext="{Binding FigureCollection}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <Button Grid.Row="1" Grid.Column="0"
+                Content="Redraw" cal:Message.Attach="Render"/>
+        </Grid>
     </Grid>
 </Window>
