--- a/Paint101/Paint101.Desktop/Views/ShellView.xaml
+++ b/Paint101/Paint101.Desktop/Views/ShellView.xaml
@@ -24,35 +24,58 @@
             <lc:Canvas CanvasData="{Binding CanvasModel.CanvasData}"/>
         </ScrollViewer>
 
-        <Grid Grid.Row="0" Grid.Column="0" MinWidth="100"
+        <Grid Grid.Row="0" Grid.Column="0" MinWidth="150"
               DataContext="{Binding FigureLibrary}">
             <ListView Name="FiguresLibraryList" ItemsSource="{Binding Figures}">
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Tag="{Binding DataContext, ElementName=FiguresLibraryList}">
-                            <StackPanel.ContextMenu>
+                        <Grid HorizontalAlignment="Stretch"
+                                Tag="{Binding DataContext, ElementName=FiguresLibraryList}">
+                            <Grid.ContextMenu>
                                 <ContextMenu cal:Bind.ModelWithoutContext="{Binding Path=PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
                                     <MenuItem Header="Add" cal:Message.Attach="Add($datacontext)"/>
                                 </ContextMenu>
-                            </StackPanel.ContextMenu>
+                            </Grid.ContextMenu>
                             <TextBlock Text="{Binding DisplayName}" ToolTip="{Binding Description}"/>
-                        </StackPanel>
+                        </Grid>
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
         </Grid>
 
-        <Grid Grid.Row="0" Grid.Column="2" MinWidth="100"
+        <Grid Grid.Row="0" Grid.Column="2" MinWidth="150"
               DataContext="{Binding FigureCollection}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-
-            <Button Grid.Row="1" Grid.Column="0"
+            <Button Grid.Row="0" Grid.Column="0"
+                Content="Up" cal:Message.Attach="MoveUp"/>
+            <Button Grid.Row="0" Grid.Column="1"
+                Content="Down" cal:Message.Attach="MoveDown"/>
+            <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
+                      Name="FigureCollectionList" ItemsSource="{Binding Figures}"
+                      SelectedItem="{Binding SelectedFigure}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Tag="{Binding DataContext, ElementName=FigureCollectionList}">
+                            <Grid.ContextMenu>
+                                <ContextMenu cal:Bind.ModelWithoutContext="{Binding Path=PlacementTarget.Tag, RelativeSource={RelativeSource Self}}">
+                                    <MenuItem Header="Edit" cal:Message.Attach="Edit($datacontext)"/>
+                                    <MenuItem Header="Remove" cal:Message.Attach="Remove($datacontext)"/>
+                                </ContextMenu>
+                            </Grid.ContextMenu>
+                            <TextBlock Text="{Binding DisplayName}" ToolTip="{Binding Description}"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"
                 Content="Redraw" cal:Message.Attach="Render"/>
         </Grid>
     </Grid>
